----------------------------------------------------------------------
 OmegaT 2.3.0 update 2
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.3.0 update 2 vs. 2.3.0 update 1

  Bug fixes:

  - Pipe-sign | missing from fields when copy-pasting
  http://sourceforge.net/support/tracker.php?aid=3395795

  Localisation updates:  
  - Spanish localisation updated to 2.3 (UI, documentation, readme)

----------------------------------------------------------------------
 OmegaT 2.3.0 update 1
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   3 Localisation updates
----------------------------------------------------------------------
2.3.0 update 1 vs. 2.3.0 

  Bug fixes:

  - Mozilla DTD handler is skipping segments
  http://sourceforge.net/support/tracker.php?aid=3369466

  Localisation updates:  

  - Dutch localisation updated to 2.3, backported from 2.5 (UI)
  - Hungarian localisation updated to 2.3 (UI, Instant Start)
  - Italian localisation updated to 2.3 (UI, Instant Start, readme)

----------------------------------------------------------------------
 OmegaT 2.3.0
----------------------------------------------------------------------
  10 Enhancements
   6 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.3.0 vs. 2.2.3 update 4

  Implemented requests:

  - Allow blank translations in PO files
  http://sourceforge.net/support/tracker.php?aid=2974663

  - TransTips to consider letter case
  http://sourceforge.net/support/tracker.php?aid=3027339

  - Ability to translate WordArt in MS Office files
  http://sourceforge.net/support/tracker.php?aid=3311077

  - Add .xliff extension to the XLIFF filter
  http://sourceforge.net/support/tracker.php?aid=3339675

  - Enable no prefix for fuzzy matches