@@ -2,7 +2,7 @@
  OmegaT 2.3.0 update 2
 ----------------------------------------------------------------------
    0 Enhancement
-   1 Bug fix
+   2 Bug fixes
    1 Localisation update
 ----------------------------------------------------------------------
 2.3.0 update 2 vs. 2.3.0 update 1
@@ -11,6 +11,8 @@
 
   - Pipe-sign | missing from fields when copy-pasting
   http://sourceforge.net/support/tracker.php?aid=3395795
+
+  - Parse exception in the LaTeX filter
 
   Localisation updates:  
   - Spanish localisation updated to 2.3 (UI, documentation, readme)
